Update QR code link in BaratCard.html

--- a/BaratCard.html
+++ b/BaratCard.html
@@ -253,7 +253,7 @@
     </div>
     
     <div class="qr">
-        <a href="https://ibb.co/2YW2gj87" target="_blank">
+        <a href="https://maps.app.goo.gl/daqfGAN4oa3Foa8o8" target="_blank">
             <img src="https://i.ibb.co/1J7V89sf/Whats-App-Image-2025-10-18-at-6-32-53-PM.jpg" alt="Whats-App-Image-2025-10-18-at-6-32-53-PM" border="0" />
         </a>
     </div>
