Add overflow hidden to page styles

--- a/BaratCard.html
+++ b/BaratCard.html
@@ -37,6 +37,7 @@
             transform: translateY(100vh);
             transition: opacity 1.5s ease, transform 1.5s ease;
             backface-visibility: hidden;
+            overflow: hidden;
         }
 
         .page.active {
